--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Ravil Who Codes Deploy To IPFS  
+name: Ravil Who Codes Deploy To IPFS
 
 on:
   push:
@@ -22,26 +22,27 @@ jobs:
         run: hugo --minify #--baseURL "https://ravil-who-codes.xyz"
 
       - name: Install IPFS
-        run: wget https://dist.ipfs.tech/go-ipfs/v0.18.0/go-ipfs_v0.18.0_linux-amd64.tar.gz
-            tar -xvzf go-ipfs_v0.18.0_linux-amd64.tar.gz
-            sudo bash go-ipfs/install.sh
+        run:
+          wget https://dist.ipfs.tech/go-ipfs/v0.18.0/go-ipfs_v0.18.0_linux-amd64.tar.gz
+          tar -xvzf go-ipfs_v0.18.0_linux-amd64.tar.gz
+          sudo bash go-ipfs/install.sh
 
       - name: Initializa IPFS
         run: ipfs init
 
       - name: Deploy to IPFS
         run: |
-            ipfs daemon --init & 
-            sleep 10 # Give IPFS daemon time to start
-            IPFS_HASH=$(ipfs add -r public -Q)
-            echo "Deployed to IPFS with hash: $IPFS_HASH"
-            echo "::set-output name=ipfs_hash::$IPFS_HASH"
+          ipfs daemon --init & 
+          sleep 10 # Give IPFS daemon time to start
+          IPFS_HASH=$(ipfs add -r public -Q)
+          echo "Deployed to IPFS with hash: $IPFS_HASH"
+          echo "::set-output name=ipfs_hash::$IPFS_HASH"
 
-      - name: - name: Update DNSLink on Namecheap
-      env:
-        NAMECHEAP_HOSTNAME: "_dnslink"
-        NAMECHEAP_DOMAIN: "ravil-who-codes.xyz"
-        NAMECHEAP_PASSWORD: ${{ secrets.NAMECHEAP_DDNS_PASSWORD }}
-        IPFS_HASH: ${{ steps.deploy.outputs.ipfs_hash }}
-      run: |
-        curl "https://dynamicdns.park-your-domain.com/update?host=${NAMECHEAP_HOSTNAME}&domain=${NAMECHEAP_DOMAIN}&password=${NAMECHEAP_PASSWORD}&ip=127.0.0.1&txt=_dnslink=/ipfs/${IPFS_HASH}"
+      - name: Update DNSLink on Namecheap
+        env:
+          NAMECHEAP_HOSTNAME: "_dnslink"
+          NAMECHEAP_DOMAIN: "ravil-who-codes.xyz"
+          NAMECHEAP_PASSWORD: ${{ secrets.NAMECHEAP_DDNS_PASSWORD }}
+          IPFS_HASH: ${{ steps.deploy.outputs.ipfs_hash }}
+        run: |
+          curl "https://dynamicdns.park-your-domain.com/update?host=${NAMECHEAP_HOSTNAME}&domain=${NAMECHEAP_DOMAIN}&password=${NAMECHEAP_PASSWORD}&ip=127.0.0.1&txt=_dnslink=/ipfs/${IPFS_HASH}"
