--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: hugo --minify #--baseURL "https://ravil-who-codes.xyz"
 
       - name: Install IPFS
-        run:
+        run: |
           wget https://dist.ipfs.tech/go-ipfs/v0.18.0/go-ipfs_v0.18.0_linux-amd64.tar.gz
           tar -xvzf go-ipfs_v0.18.0_linux-amd64.tar.gz
           sudo bash go-ipfs/install.sh
